--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,16 @@ buildscript {
     repositories {
         mavenCentral()
     }
-    
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'kotlinx-serialization'
 
 group 'de.odinmatthias'
 version '0.0.1-SNAPSHOT'
