--- a/build.gradle
+++ b/build.gradle
@@ -46,5 +46,9 @@ dependencies {
     implementation "org.jetbrains.exposed:exposed-core:$exposedVersion"
     implementation "org.jetbrains.exposed:exposed-dao:$exposedVersion"
     implementation "org.jetbrains.exposed:exposed-jdbc:$exposedVersion"
+    implementation "org.xerial:sqlite-jdbc:3.34.0"
+    implementation "org.mindrot:jbcrypt:0.4"
+
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+    testImplementation "org.hamcrest:hamcrest:2.2"
 }
