fully replace templated html frontend with react

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,18 @@ repositories {
     mavenCentral()
 }
 
+task buildFrontend(type: Exec) {
+    workingDir "$projectDir"
+    String npm = 'npm'
+
+    if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+        npm = 'npm.cmd'
+    }
+
+    workingDir 'frontend'
+    commandLine npm, 'run', 'buildAndMove'
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
