--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "org.jetbrains.exposed:exposed-core:$exposedVersion"
     implementation "org.jetbrains.exposed:exposed-dao:$exposedVersion"
     implementation "org.jetbrains.exposed:exposed-jdbc:$exposedVersion"
+    implementation "org.jetbrains.exposed:exposed-java-time:$exposedVersion"
     implementation "com.zaxxer:HikariCP:3.4.2"
     implementation "org.xerial:sqlite-jdbc:3.34.0"
     implementation "org.mindrot:jbcrypt:0.4"
