--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ task buildFrontend(type: Exec) {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "io.ktor:ktor-websockets:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
