add .gitkeep to react folder because frontend build fails if it doesnt exist

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,5 @@ database/db.sqlite
 **/*.secret
 resources/secretSignKey.secret
 .sessions
-resources/react
+resources/react/*
+!resources/react/.gitkeep
