--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-multi-carousel": "^2.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-use-websocket": "^4.2.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
