--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.0.0",
     "react-image-lightbox": "^5.1.4",
     "react-multi-carousel": "^2.8.0",
+    "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-use-websocket": "^4.2.0",
