--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
+    "react-chat-elements": "^12.0.0",
     "react-dom": "^18.0.0",
     "react-image-lightbox": "^5.1.4",
     "react-multi-carousel": "^2.8.0",
