--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.2",
     "@types/uuid": "^8.3.4",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-chat-elements": "^12.0.0",
