--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ task buildFrontend(type: Exec) {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-server-netty:1.6.0" // broken in ktor_version?
     implementation "io.ktor:ktor-websockets:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "io.ktor:ktor-client-core:$ktor_version"
