--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "simplebar-react": "^2.4.1",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/yup": "^0.29.14"
   }
 }
